# stm32f4_peripheral

./: .gitignore  CMakeLists.txt  README.md
CMSIS/Include/: arm_math.h
usb_cdc_device/: usb_bsp.c  usb_conf.h  usbd_desc.c  usbd_req.c
